# corotTruss-example

./: .gitignore  README.md  inclined_corot_truss.ipynb  pyproject.toml  requirements.txt  setup.py
src/opensees_material_testing/: __init__.py  test_uniaxialMaterial.py
